--- a/mines/mines.csproj
+++ b/mines/mines.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -79,6 +80,21 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="assets\imgLose.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="assets\imgMine.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="assets\imgNeutral.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="assets\imgOpen.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="assets\imgWin.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
